(self.webpackChunksteamui = self.webpackChunksteamui || []).push([
  [8216],
  {
    36645: (e) => {
      e.exports = {
        BreakNarrow: "1158px",
        BreakWide: "1774px",
        BreakUltraWide: "2100px",
        BreakShort: "600px",
        BreakTall: "1200px",
        RightBreakUltraNarrow: "600px",
        RightBreakNarrow: "884px",
        RightBreakWide: "1500px",
        RightBreakUltraWide: "1826px",
        GamepadUIBreakNarrow: "853px",
        GamepadUIBreakWide: "1280px",
        GamepadUIBreakShort: "500px",
        "duration-app-launch": "800ms",
        animationTransitionMS: "150ms",
        Wrapper: "_1MJgF2zv_IeXtUgZ6fU9H7",
        PreviewPinnedView: "_2ZjtdtbYz5UXQpOeWxsVoq",
        TopSection: "_28dkcmodlp5Ooe1EJDdzUs",
        TopSectionRightSide: "_2b5Wr4EPgFV-0TlrAIea5-",
        BackToGame: "XBOPCwP2Bo8up1QjGtUiI",
        BackToGameBtn: "_15gxV6Q8_KW_-utK740dEf",
        TextContainer: "_2Qr4ynT6wtMamSQmnTTM42",
        GameName: "_3OZ1eRazMbRPSK6CMGg8oJ",
        KBShortcut: "_2d2K4JcSjCS62tnxvjSvfi",
        TopSectionMiddle: "_2kD6yUXIto70PSAsVyYnvw",
        ShowGameLogo: "AisB3kxvIoonvhgagjEWI",
        TimeStats: "_2zlbGoXRHz18T14H50qQZa",
        CurrentTime: "_2ISxBrh6nwUXeKpioRdHo9",
        CurrentDate: "_2oimdr1nE3vY1VKLfg7cTH",
        PlaytimeCurrentSession: "_3Qoz_DTS7P89jq_yzSC4BU",
        TimeTrialRemaining: "_2hPCMJNA-jchM9HTSSplak",
        ExitGameBtn: "_1hGkh_kzZ-PoHr2I7c5eCu",
        NetworkStatus: "cJPLbeGY3wNxSIITiXYdn",
        IPShareStatus: "_2MYNE1RarDkde-aaM4_RgK",
        IPShareLearnMore: "_1494294HII7kERLeq2wJHP",
        PingReduced: "_15zK2mE7WAZPzHbfz7DCOB",
        PingMS: "VmPNHeKEIu3yZHcQRYe5p",
        Loss: "_2po5ZTWzDqv3e50f6bapqt",
        Great: "jAZ_7X96cuVLxYgwLimXv",
        Good: "_1xjxt46eRkHZToADpUzJqA",
        OK: "_1PEwBX661dYY6biEFJcPD-",
        Poor: "_3yryrHQA9jSYVcoaDxJUnn",
        SDRPOPID: "_2-UbQrJDQyqqBsLvRHs-wM",
        ToolbarMaxWidthContainer: "_2QoqaZaXm7LKCzqYAKYXKW",
        ToolbarContainer: "_10T2j3nynZSKnIKIRrTLr4",
        LocationLeft: "_1ZJiAOFlgYu_r6rhwk305W",
        Toolbar: "_33DvvaAAsKaD30JrKzcL38",
        ToolbarButton: "_2xqwHms_kkW3jPhfsUTa8",
        ToolbarToolTip: "_2fpO08WLm1wHM-zv_2gorM",
        LocationRight: "_2lB2QLBoahuRhxe6EtUABI",
        ToolbarButtonAndLabel: "_12HZnr6Zw50fN5X-TGbWn",
        LocationTop: "hTmrRvwA2tzcfo7EJTVUf",
        LocationBottom: "JQpHHwTSEIyx0cY6lsmps",
        Toggled: "_2quMUWhcxOFUv7Y8RS2rQe",
        OverlayPopupBody: "_2qSyq_YVLJJvwjh71G70It",
        OverlayPopup: "_1xNredcxcE1iZp2rY7-d22",
        Resizable: "_1JcvH33VjiuFs3_u8iGvi8",
        FitToContent: "O0X_oXPQwtBhFumOk7TE9",
        PinnedView: "_35HCrHzAPB7Un9xInLe1QP",
        PinnedViewURLBar: "_3xKHiGfi2ZsT9Gc70vWaE3",
        NoTitlebarSpacer: "_11eaJxuQFhWGyzYwAJJSz5",
        WindowControls: "_3_Rt3AAxiCx7hUko83ng09",
        WindowButtonTooltip: "_3NU5D-aApcyfoeS_9UcICu",
        PinWindowButton: "_2hQjyojePNW4bZIppxX3d_",
        Pinned: "HWMaLkusX6Aab1OwmBBFC",
        CloudSyncButton: "_3rU5o21t8pnXLV9Dv9vFL6",
        OpacityButton: "jF7duQYYRVsvJH5HTutcY",
        ControllerConfiguratorWrapper: "_2XeK18WibyDZy7lkEO5dpB",
        BrowserViewHost: "_3MlytomQK4vCR6pDyyDj12",
        OverlayAchievements: "_2h9LhFaSnbNmsneySk4l97",
        Container: "_37v38E_StZdweCoSS6wy6n",
        OverlayBroadcast: "MPR_SYayr1J7ILS9VdsPK",
        Title: "JHB870EeQHaMq9eprCiJq",
        ViewerCount: "_1EzFCinlbDj9Gjwq2EqfoY",
        Buttons: "_2oxKq-G24EfuViZPeO3z9k",
        OverlayBroadcastChat: "_2pMUBNsVcVOwCsiTeDGNUF",
        OverviewTitle: "_26y-DECmlfx0lc_Hv44PgC",
        GameOverview: "_1xeg0ZFm1DNPKbA9uOjFlT",
        IsDragging: "cxif1DlmoBs8sfzfQVSjJ",
        GameOverviewSectionHeader: "_1Q-eMJi4hHWapnM5jkXqg7",
        GameOverviewSection: "_2U0q8iFEUZp8KxE3zz1C26",
        HasBackground: "T9Afbc_RnzaY2LF7pBb6o",
        GameOverviewSectionTitle: "ktaB_F5HdyYc0X34E0mte",
        DragHandle: "HeHhnzrStSWz7cVthF92c",
        GameOverviewSectionChildren: "_2coMq0Gmf7ELNw1azeMkTH",
        ContainChildren: "_38fD5HlMvKxAu3eBgAKTbg",
        Playtime: "PfUitjFqghh6L-2558Jiw",
        FriendsWhoPlayed: "_3w87oBuwp1uLne2RzPIeqU",
        Friend: "_11t1PmMPRUomeR95jZRcRu",
        PlayersSection: "_3hpEn4H6tjIGLbf8GKA0vS",
        Players: "_2DbUDUhwPBFTI9cJTXRwkG",
        Player: "_1gdT2lBI-BBp2EOKjTgvBU",
        ViewPlayersBtn: "_2TsagsVi0bFDnNztolUHP4",
        ScreenshotsList: "_1F-QnvHawMu2gd_gYgoDDQ",
        Screenshot: "_2iPPrLRQeSSok7PJ5ocCkp",
        AchievementsList: "_1Hz4oAP9fiba9H98tjnior",
        RecentAchievement: "_3a1Y1FB5NkaJJ0iV5-qUbJ",
        UnlockTime: "_2LgSP4AnrOLvSSQHg0jDe5",
        AchievementDetails: "_328-WaliIRslf2ewtqR2Sp",
        AchievementContent: "_3lBxWGKgWYZwVv0Uf-AtGr",
        AchievementTitle: "_2y-2VLgw8KpeOlvqXRvE9m",
        AchievementDescription: "_2yGvZNxeAaVt8SbGgyGMbe",
        AchievementGlobalPercentage: "_1tovDR9RyxNMtzFMg-b0th",
        GuideListItem: "_12gDl_iArnUqJNPYbVLVxr",
        GuideTitle: "v-wg8NTsDqEEpOrtck5S6",
        RecentNewsItem: "_1-An2oorO8mDpzICH9p0_S",
        EventDetailTitle: "_3XQU8OYiF1A4HeocnI6sdV",
        PostedTime: "_3QUfKCz0a9_Z5Cb63tcotr",
        ResizeGrip: "_3UPE6BCKAJaCqdZfAEoY1r",
        TimeRow: "_23JdsNrviX1kNjHf5rTqDD",
        BatteryIcon: "_1K7s_WveZJroi3a4YIno3D",
        TimelineHintContainer: "_1BtnT_tFzksHUZ8-oC42K",
        Content: "_1bbRSvrRrGtt9Yq1nKA_Gd",
        CloseButton: "_1cNX-eKkD0LNNfdfYME8CM",
        NewBadge: "_1IY5au-9IjfSDM30xuoWAf",
        Triangle: "_2md7GwWJvIJIwCcUryLHJx",
        ToolbarButtonHintTitle: "_3B89AlN6bB3KXBgRuA2uDd",
        ToolbarButtonHintText: "_3odAhzGD6TbkuA1MYyCDtG",
        ToolbarButtonHintActions: "_1weJmSYJGFGIQooDtwPJkn",
        KeyboardCapture: "d4wUvwaSuUb30Amkj7rOb",
        TransparentBackground: "_2_v1BiFUpGfxhBQ1QIIJfB",
        GameOverlayPlayer: "_16TMUpH1mBB-W9-O8DLyCO",
        HideTimeline: "UylaEc4K2JWpY2hSvojR5",
        TimelineAndControls: "UgQp-NQIbjw2dbLYF77Cw",
        Timeline: "_2mxOP83pEM0_VV774kShWG",
        RecordButton: "_3YE9qDw2ZPiAlb6miHPQvg",
        SettingIcon: "_3Jmhs4xQ0XriEUHZa3d9t0",
        GamePlayerContents: "_2fP0tlgegInERiBXbtZN_z",
        Appear: "_8k7abBOa-TVjEA9_7IKh9",
        AppearActive: "bjDColL00w6EfKTxthn22",
        AppearDone: "MJW7PONSp7vILhWHes0_m",
        Exit: "_3UEuLeovJg6vFNzf9ukxnE",
        ExitActive: "_2BpwnCL-9VeKtWqCwOlXQY",
        ExitDone: "_3k_-SvmR_OcQihSoh1Vcgp",
        MediaButtons: "_3bk92dZGNJnqwTR47byuLO",
        ShowVideoButton: "_2AtQdZFU-mOGE-_3SuQKkw",
        RecordingIconsAndState: "_1J8umaxlHnD4poewN6r8wp",
        ShowTimeline: "kpjEte8xsRNHdA7zYuIqE",
        Flash: "_3n1CJtzP28EGWD-4nYTzVh",
        flash: "_37SaehKbT3IuqxKuHoXYIF",
        BackgroundRecording: "_2xLvfqjaRw9d1Ah8Tn7X52",
        OtherRecordingButton: "_2_6fcPHbF29dPIJR8PIgdR",
        ManualRecording: "_2hoTqlCpHBmfJOfqYJSnjF",
        CurrentlyRecording: "_2lP-Y8DCwSDGqES_9Yheab",
        DisableSwitching: "_3P_fjYlgWa8F7uqipqwq6k",
        LowDiskSpaceWarning: "_1dfq60hDr5u6axRBBBaVpJ",
        RecordingShortcut: "_3KHj08HvOe8qLJypZi4y4M",
        ViewClipsButton: "_3QLt_cnTY9p8pNOj9jxTxR",
        RecordingState: "_3V5eWxUcrYGCYGr-ZHfGG9",
        RecordingCircle: "_3wsYp4D6zoNQnYzoF5uAK",
        ClipSavedHint: "_3UI9EIWIqDQG-6XzDUWOry",
      };
    },
    83125: (e, t, n) => {
      "use strict";
      n.r(t), n.d(t, { default: () => L });
      var a = n(27378),
        i = n(36645),
        o = n(62914),
        r = n(65671),
        c = n(15066),
        l = n(42816),
        s = n(34374),
        d = n(29151),
        m = n(19218),
        S = n(8128),
        u = n(87733),
        g = n(41370),
        p = n(18554),
        _ = n(80162),
        h = n(7170),
        R = n(98571),
        w = n(86064),
        v = n(35484),
        T = n(41569),
        b = n(77486),
        E = n(59169),
        C = n(32516),
        B = n(66667),
        D = n(29609),
        k = n(94695),
        f = n(81639),
        I = n(72595),
        y = n(85164),
        G = n(24615),
        A = n(94256),
        P = n(34656),
        H = n(92761),
        x = n(24751),
        N = n(50947);
      const M = parseInt(i.animationTransitionMS);
      const L = function (e) {
        const { gameID: t, timelineWidth: n } = e,
          i = (0, E.pv)().DesktopOverlay;
        return (
          a.useEffect(() => () => i.ChangeTimelineExpansionState(!1), [i]),
          a.createElement(T.SK, null, a.createElement(U, { ...e }))
        );
      };
      function O(e) {
        return a.createElement(
          "div",
          { className: i.TransparentBackground },
          e.children,
        );
      }
      function U(e) {
        const { gameID: t, timelineWidth: n } = e,
          { loader: o, fnGetManifest: r } = (0, _.sA)(t),
          m = (0, k.Ow)(t),
          S = (0, b.useGameRecordingSetting)(),
          u = (0, c.yL)(t),
          g = (0, C.Q2)(),
          p = (0, a.useCallback)(
            (e) => {
              g.Media.Clip({ state: { id: e } });
            },
            [g],
          ),
          R = (0, a.useCallback)(
            (e, t) => {
              const n = (0, B.dd)({ strGameID: e, hHandle: t });
              g.Media.Screenshot({ state: { id: n } });
            },
            [g],
          ),
          v = (0, a.useCallback)(
            (e, t) => {
              let n = {};
              e && (n.listSource = { type: "app", gameid: e }),
                t && (n.mediaType = t),
                g.Media.Grid({ state: { filter: n } });
            },
            [g],
          ),
          D = (0, T.uZ)(),
          {
            bShowClipSavedHint: I,
            hideClipSavedHint: G,
            showClipSavedHintIfNecessary: A,
          } = (function () {
            const [e, t] = (0, a.useState)(!1),
              n = (0, P.y$)(),
              i = (0, E.pv)().DesktopOverlay,
              o = (0, a.useCallback)(async () => {
                if (!i) return;
                const e = "seen_clip_saved_hint";
                (await n.GetString(e)) ||
                  (n.StoreString(e, "1"), (i.m_bShowClipSavedHint = !0), t(!0));
              }, [i, n]),
              r = (0, a.useCallback)(() => {
                (i.m_bShowClipSavedHint = !1), t(!1);
              }, [i]);
            return {
              showClipSavedHintIfNecessary: o,
              bShowClipSavedHint: e,
              hideClipSavedHint: r,
            };
          })(),
          N = (0, a.useCallback)(() => {
            G(), v(t);
          }, [t, v, G]),
          M = (0, k.Ho)(A),
          L = (0, f.n5)(),
          U = (0, T.uZ)(),
          q = (0, a.useCallback)((e, t, n) => n && U.onConfirm(n), [U]),
          J = (0, a.useCallback)(
            () => g.SteamWeb(y.De.HELP_BASE_URL + `faqs/view/${l.k_strGRFAQ}`),
            [g],
          ),
          Q = a.useRef();
        return a.createElement(
          h.y,
          { className: i.KeyboardCapture },
          a.createElement(
            O,
            null,
            a.createElement(
              s.P,
              {
                onNavigateToGRSettings: () => g.Settings("GR"),
                onSaveOrShareClipRequested: M,
                onMarkerCreated: q,
                onNavigateToClip: p,
                onNavigateToScreenshot: R,
                onShowClipShareSheet: L,
                onNavigateToMedia: v,
                onNavigateToFAQ: J,
              },
              a.createElement(
                d.dF,
                {
                  loader: o,
                  fnGetManifest: r,
                  mode: d.tP.Overlay,
                  recordingState: m,
                  recordingSetting: S,
                  clipSummaries: u,
                },
                a.createElement(W, {
                  gameID: t,
                  loader: o,
                  timelineWidth: n,
                  ref: Q,
                }),
              ),
              a.createElement(
                T.K5,
                { ...D.confirmationProps },
                (0, w.Xx)("#ClipCreated_Confirmation"),
              ),
              a.createElement(
                T.K5,
                { ...U.confirmationProps },
                (0, w.Xx)("#Marker_UserMarkerAdded_Confirmation"),
              ),
              I &&
                a.createElement(
                  H.T,
                  {
                    target: Q.current,
                    bEnablePointerEvents: !0,
                    direction: "bottom",
                    nBodyAlignment: 1,
                    className: i.ClipSavedHint,
                  },
                  a.createElement(x.$d, { onRequestClose: G, onViewClip: N }),
                ),
            ),
          ),
        );
      }
      const W = a.forwardRef(function (e, t) {
        const { gameID: n, loader: o, timelineWidth: l } = e,
          s = (0, c.yL)(n),
          S = (0, b.useGameRecordingShortcuts)(),
          u = a.useRef(),
          _ = (0, N.BE)(t, u),
          R = (0, d.we)(),
          w = (0, E.pv)(),
          T = w.DesktopOverlay,
          C = (0, g.SZ)(() => R.BPlayerInitialized()),
          B = (0, g.SZ)(() => T.overlay_active);
        a.useEffect(() => {
          !B && C && R.GetGameRecordingVideo().Pause();
        }, [B, R, C]);
        const [D] = (0, r.HQ)("g_background_mode"),
          [k, f] = (0, a.useState)(1 == D);
        !(function (e, t) {
          a.useEffect(() => {
            const n = (0, c.Ws)(e, t);
            return () => {
              n && n();
            };
          }, [e, t]);
        })(n, (e) => {
          1 == e.notification_type && f(!0);
        });
        const y = (0, g.SZ)(() => R.GetHidePlayer());
        a.useEffect(() => {
          T.ChangeTimelineExpansionState(!y);
        }, [T, y]),
          a.useEffect(() => {
            1 === D &&
              T.SetFnChangeTimelineExpansion((e) => R.SetHidePlayer(!e));
          }, [T, R, D]);
        const G = (0, c.B$)(),
          A = (function () {
            const [e, t] = a.useState(),
              n = a.useCallback((e) => {
                t(e);
              }, []);
            return (
              a.useEffect(() => {
                const e = SteamClient.Broadcast.RegisterForBroadcastStatus(n);
                return () => e.unregister();
              }, [n]),
              e?.bIsBroadcasting
            );
          })(),
          { rgApps: P } = (0, c.D0)(),
          H = a.useMemo(() => {
            const e = P.find(
              (e) => e.is_active && e.recording_type > 1 && e.game_id !== n,
            );
            return e?.game_id;
          }, [P, n]),
          x = (0, I.Lm)(w?.BrowserWindow);
        if ((0, g.SZ)(() => x < 800) || !k)
          return 2 === D
            ? a.createElement(K, {
                gameID: n,
                bShowTimeline: !1,
                bLowDiskSpace: G,
                otherRecordingGameID: H,
                bIsBroadcasting: A,
              })
            : a.createElement(F, {
                gameID: n,
                otherRecordingGameID: H,
                bLowDiskSpace: G,
                bIsBroadcasting: A,
              });
        let M = { width: l };
        return a.createElement(
          h.q,
          null,
          a.createElement(
            p.Hc,
            { loader: o },
            a.createElement(
              "div",
              { className: (0, v.Z)(i.GameOverlayPlayer, "GameOverlayPlayer") },
              a.createElement(
                "div",
                {
                  style: M,
                  className: (0, v.Z)(i.TimelineAndControls),
                  ref: _,
                },
                a.createElement(
                  "div",
                  { className: i.Timeline },
                  a.createElement(m.$D, {
                    loader: o,
                    clipSummaries: s,
                    shortcuts: S,
                    refTimelineParentCtn: u,
                  }),
                ),
                a.createElement(
                  "div",
                  { className: i.MediaButtons },
                  a.createElement(z, { gameID: n }),
                  a.createElement(
                    "div",
                    null,
                    2 === D
                      ? a.createElement(K, {
                          gameID: n,
                          bShowTimeline: k,
                          otherRecordingGameID: H,
                          bLowDiskSpace: G,
                          bIsBroadcasting: A,
                        })
                      : a.createElement(Y, {
                          gameID: n,
                          otherRecordingGameID: H,
                          bLowDiskSpace: G,
                          bShowTimeline: k,
                          bIsBroadcasting: A,
                        }),
                  ),
                  a.createElement(V, { bHidePlayer: y }),
                ),
              ),
              a.createElement(Z, { bHidePlayer: y }),
            ),
          ),
        );
      });
      function q(e) {
        const { bShowTimeline: t } = e;
        return a.createElement(
          "div",
          {
            className: (0, v.Z)(
              i.RecordingIconsAndState,
              i.LowDiskSpaceWarning,
              t && i.ShowTimeline,
            ),
          },
          a.createElement(
            "div",
            { className: i.RecordingState },
            (0, w.Xx)("#RecordingState_ManualRec_LowDiskSpace"),
          ),
        );
      }
      function J(e) {
        const { bShowTimeline: t } = e,
          n = (0, C.Q2)();
        return a.createElement(
          A.HP,
          {
            direction: "bottom",
            toolTipContent: (0, w.Xx)(
              "#RecordingState_ManualRec_ActiveBroadcastTooltip",
            ),
            className: (0, v.Z)(
              i.RecordingIconsAndState,
              i.OtherRecordingButton,
              t && i.ShowTimeline,
            ),
            onClick: () => n.Settings("Broadcast"),
          },
          (0, w.Xx)("#RecordingState_ManualRec_ActiveBroadcast"),
        );
      }
      function Q(e) {
        const {
          gameID: t,
          otherRecordingGameID: n,
          bLowDiskSpace: o,
          bShowTimeline: r,
          bDisableSwitching: l,
          recordingMode: s,
        } = e;
        let d = a.useCallback(() => {
          if (l) return;
          const e = (0, c.kW)();
          e &&
            n &&
            (R.q.ReportTrackedAction(`/GameRecording/RecordingSwitch/${n}`),
            e(t));
        }, [n, t, l]);
        return !n || o
          ? null
          : a.createElement(
              A.HP,
              {
                direction: "bottom",
                bDisabled: l,
                toolTipContent: (0, w.Xx)(
                  "#RecordingState_BackgroundRec_SwitchRecordedGame",
                ),
                className: (0, v.Z)(
                  i.RecordingIconsAndState,
                  i.OtherRecordingButton,
                  r && i.ShowTimeline,
                  l && i.DisableSwitching,
                  2 === s ? i.ManualRecording : i.BackgroundRecording,
                ),
                onClick: d,
              },
              a.createElement(
                "div",
                { className: i.RecordingState },
                (0, w.kQ)(
                  "#RecordingState_BackgroundRec_AnotherRecordingGoing",
                  a.createElement("div", { className: i.RecordingCircle }),
                ),
              ),
            );
      }
      function Y(e) {
        const {
          gameID: t,
          bShowTimeline: n,
          bLowDiskSpace: i,
          bIsBroadcasting: o,
          otherRecordingGameID: r,
        } = e;
        return o
          ? a.createElement(J, { bShowTimeline: n })
          : r
            ? a.createElement(Q, {
                gameID: t,
                otherRecordingGameID: r,
                bLowDiskSpace: i,
                bShowTimeline: n,
                recordingMode: 1,
                bDisableSwitching: !0,
              })
            : null;
      }
      function K(e) {
        const {
            gameID: t,
            bShowTimeline: n,
            bLowDiskSpace: o,
            bIsBroadcasting: r,
            otherRecordingGameID: l,
          } = e,
          s = (0, d.we)(),
          [m, u] = (0, a.useState)(),
          p = (0, E.pv)().DesktopOverlay,
          _ = o || l || r;
        a.useEffect(() => {
          n
            ? p.SetFnChangeTimelineExpansion((e) => s.SetHidePlayer(!e))
            : (p.ChangeTimelineExpansionState(!1),
              p.SetFnChangeTimelineExpansion((e) => {
                u(!0),
                  window.setTimeout(() => {
                    u(!1);
                  }, 3e3);
              }));
        }, [p, n, s]);
        const [h] = (0, b.useToggleForegroundRecordingShortcut)(),
          T = (0, g.SZ)(() => s.GetRecordingState()) === S.m8.ManualRecording,
          { fnStartRecording: C, fnStopRecording: B } = (0, c.at)(),
          D = (0, a.useCallback)(() => {
            if (T)
              B(t),
                R.q.ReportTrackedAction(
                  "/GameRecording/RecordingStop/ManualRecordingButton",
                );
            else {
              if (_) return;
              {
                C(t);
                const e = s.GetLiveEdgeMS();
                s.FocusGlobalMS(e),
                  R.q.ReportTrackedAction(
                    "/GameRecording/RecordingStart/ManualRecordingButton",
                  );
              }
            }
          }, [_, T, B, t, C, s]);
        if (r) return a.createElement(J, { bShowTimeline: n });
        if (o) return a.createElement(q, { bShowTimeline: n });
        if (l)
          return a.createElement(Q, {
            gameID: t,
            otherRecordingGameID: l,
            bLowDiskSpace: o,
            bShowTimeline: n,
            recordingMode: 2,
            bDisableSwitching: !0,
          });
        let k;
        return (
          (k = T
            ? h?.display_name
              ? (0, w.kQ)(
                  "#RecordingState_ManualRecStopShortName_CTA",
                  a.createElement(
                    "span",
                    { className: i.RecordingShortcut },
                    h.display_name,
                  ),
                )
              : (0, w.Xx)("#RecordingState_ManualRecStop_CTA")
            : h?.display_name
              ? (0, w.kQ)(
                  "#RecordingState_ManualRecStartShortName_CTA",
                  a.createElement(
                    "span",
                    { className: i.RecordingShortcut },
                    h.display_name,
                  ),
                )
              : (0, w.Xx)("#RecordingState_ManualRecStart_CTA")),
          a.createElement(
            "div",
            {
              className: (0, v.Z)(
                i.RecordingIconsAndState,
                i.ManualRecording,
                m && i.Flash,
                n && i.ShowTimeline,
                T && i.CurrentlyRecording,
              ),
              onClick: D,
            },
            a.createElement("div", { className: i.RecordingState }, k),
          )
        );
      }
      function F(e) {
        const {
            gameID: t,
            otherRecordingGameID: n,
            bLowDiskSpace: o,
            bIsBroadcasting: r,
          } = e,
          c = n ?? t,
          l = (0, G.AA)("steam://open/recording/" + c);
        let s = a.useCallback(() => {
          o || l();
        }, [l, o]);
        return r
          ? a.createElement(J, { bShowTimeline: !1 })
          : o
            ? a.createElement(q, { bShowTimeline: !1 })
            : n
              ? a.createElement(Q, {
                  gameID: t,
                  otherRecordingGameID: n,
                  bLowDiskSpace: o,
                  bShowTimeline: !1,
                  recordingMode: 1,
                })
              : a.createElement(
                  "div",
                  {
                    className: (0, v.Z)(
                      i.RecordingIconsAndState,
                      i.BackgroundRecording,
                    ),
                    onClick: s,
                  },
                  a.createElement(
                    "div",
                    { className: i.RecordingState },
                    (0, w.kQ)(
                      "#RecordingState_BackgroundRec_OpenRecording",
                      a.createElement("div", { className: i.RecordingCircle }),
                    ),
                  ),
                );
      }
      function Z(e) {
        const { bHidePlayer: t } = e,
          n = (0, d.we)(),
          o = (0, p.Kc)(),
          [r, c] = (0, a.useState)(!0);
        let l = (0, a.useCallback)(() => {
          n.SetHidePlayer(!0), o();
        }, [n, o]);
        if (
          ((0, a.useEffect)(() => {
            t && c(!0);
          }, [t, c]),
          t)
        )
          return null;
        let s = {
          appear: i.Appear,
          appearActive: i.AppearActive,
          appearDone: i.AppearDone,
          exit: i.Exit,
          exitActive: i.ExitActive,
          exitDone: i.ExitDone,
        };
        return a.createElement(
          D.Z,
          { classNames: s, in: r, timeout: M, appear: !0, onExited: l },
          a.createElement(
            "div",
            { className: i.GamePlayerContents },
            a.createElement(u.i, { positionAbsolute: !0 }),
          ),
        );
      }
      function V(e) {
        const { bHidePlayer: t } = e,
          n = (0, d.we)();
        let r = (0, a.useCallback)(() => {
          t
            ? (n.SetHidePlayer(!1),
              R.q.ReportTrackedAction("/GameRecording/ShowVideo"))
            : n.SetHidePlayer(!0);
        }, [t, n]);
        return a.createElement(
          "div",
          { className: i.ShowVideoButton, onClick: r },
          (0, w.Xx)(
            t
              ? "#GameRecording_OverlayShowVideo"
              : "#GameRecording_OverlayHideVideo",
          ),
          a.createElement(o.Chevron, { direction: t ? "down" : "up" }),
        );
      }
      function z(e) {
        const { gameID: t } = e,
          n = (0, C.Q2)();
        return a.createElement(
          "div",
          {
            className: i.ViewClipsButton,
            onClick: () => {
              let e = {};
              t && (e.listSource = { type: "app", gameid: t }),
                n.Media.Grid({ state: { filter: e } });
            },
          },
          (0, w.Xx)("#GameRecording_OverlayViewClips"),
        );
      }
    },
  },
]);
//# sourceMappingURL=sourcemaps/gamerecording.js.map
